<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ibrahim.qrcodegenerator.ui.home.HomeFragment"
        android:label="@string/generate"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ibrahim.qrcodegenerator.ui.dashboard.DashboardFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_shortUrl"
        android:name="com.ibrahim.qrcodegenerator.ui.shorturl.ShortUrlFragment"
        android:label="@string/shorten"
        tools:layout="@layout/fragment_short_url" />

</navigation>